fixed rendering...again. Last upload I had moved stuff around for organization and left the appending of the created rows outside of the functions...meaning that they didn't render. Yay. I corrected this and renamed a few variables and functions for better readability and flow.

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-logo  {
+#logo  {
   size: 200px;
   margin: auto;
 }
